fixed the overflow in the description

--- a/project-starter/react-app/src/components/CoinDetail/CoinDetail.css
+++ b/project-starter/react-app/src/components/CoinDetail/CoinDetail.css
@@ -92,6 +92,7 @@
     justify-content: center;
     box-sizing: border-box;
     margin: 20px;
+    min-width: 78px;
 }
 .graph-buttons {
     font-size: 20px;
@@ -150,10 +151,12 @@ align-items: center;
     border: 1px solid white;
     border-radius: 4px;
     grid-area: description;
-    font-size: 2.8vh;
+    font-size: 2vh;
     box-sizing: border-box;
     padding: 8px;
     background-color: rgb(0, 0, 0, .6);
+    max-height: 200px;
+    overflow-y: scroll;
 }
 .description a {
     color: inherit;
